syntax = "proto3";

package packingpb;
option go_package = "./packingpb";

message Packing {
    int64 id = 1;
    string fo_id = 2;
    int32 line_id = 3;
    int32 machine_id = 4;
    int32 unit_id = 5;
    int32 department_id = 6;
    int32 area_id = 7;
    string completed_at = 8;
    int32 status = 9;
    string createdAt = 10;
    string updatedAt = 11;
    repeated EquipmentChecking equipment_checkings = 12;
}

message EquipmentChecking {
    int64 id = 1;
    int64 id_equipment_checking_list = 2;
    int64 packing_id = 3;
    int32 asset_equipment_id = 4;
    
    string fo_id = 5;
    string fo_photo = 6;
    int32 fo_condition = 7;
    string fo_note = 8;

    string ao_id = 9;
    int32 ao_conclusion = 10;
    string ao_note = 11;
    string ao_created_at = 12;

    string mo_id = 13;
    string mo_repair_photo = 14;
    string mo_note = 15;
    string mo_created_at = 16;

    string mr_id = 17;
    string mr_comment = 18;
    string mr_created_at = 19;

    string createdAt = 20;
    string updatedAt = 21;
}

// All
message GetPackingsRequest {
    string nophoto = 1;
    string page = 2;
    string perpage = 3;
    string status = 4;
    string line_id = 5;
    string machine_id = 6;
    string date = 7; 
    string fo_condition = 8;
    string ao_conclusion = 9;
}
message GetPackingsResponse {
    repeated Packing packings = 1;
    int64 total = 2;
    int64 page = 3;
    int64 last_page = 4;
}

message GetPackingRequest {
    int64 id = 1;
}
message GetPackingResponse {
    int64 id = 1;
    string fo_id = 2;
    int32 line_id = 3;
    int32 machine_id = 4;
    int32 unit_id = 5;
    int32 department_id = 6;
    int32 area_id = 7;
    string completed_at = 8;
    int32 status = 9;
    string createdAt = 10;
    string updatedAt = 11;
    repeated EquipmentChecking equipment_checkings = 12;
}

// FO
message CreatePackingRequest {
    string user_id = 1;
    int32 line_id = 2;
    int32 machine_id = 3;
    int32 status_sync = 4;
    string observation_datetime = 5;
    int32 unit_id = 6;
    int32 department_id = 7;
    int32 area_id = 8;
}
message CreatePackingResponse {
    int64 id = 1;
}

// FO
message CreateEquipmentCheckingRequest {
    int32 id_equipment_checking_list = 1;
    int32 id_packaging_check = 2;
    int32 id_asset_equipment = 3;
    string photo = 4;
    int32 condition = 5;
    string note = 6;
    int32 status = 7;
    string observation_datetime = 8;
}
message CreateEquipmentCheckingResponse {
    int64 id = 1;
}

// AO
message UpdateEquipmentCheckingRequest {
    int64 id = 1;
    int32 ao_conclusion = 2;
    string ao_note = 3;
    string ao_observation_datetime = 4;
    string ao_id = 5;
}
message UpdateEquipmentCheckingResponse {
    int64 id = 1;
}

// QFS
message CreateCommentRequest {
    int32 equipment_checking_id = 1;
    string mr_comment = 2;
    int32 mr_id = 3;
}
message CreateCommentResponse {
    int64 id = 1;
}

service PackingService {
    // All
    rpc GetPackings(GetPackingsRequest) returns (GetPackingsResponse) {};
    rpc GetPacking(GetPackingRequest) returns (GetPackingResponse) {};
    // FO
    rpc CreatePacking(CreatePackingRequest) returns (CreatePackingResponse) {};
    rpc CreateEquipmentChecking(CreateEquipmentCheckingRequest) returns (CreateEquipmentCheckingResponse) {};
    // AO
    rpc UpdateEquipmentChecking(UpdateEquipmentCheckingRequest) returns (UpdateEquipmentCheckingResponse) {};
    // QFS
    rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {};
}